# mas-rd-course-8

./: README.md  config.py  pyproject.toml  supervisor.py  tools.py
agents/: critic.py  planner.py  research.py
output/: RAG_Approaches_Comparison_Report.md
